--- a/styles/index.css
+++ b/styles/index.css
@@ -3,3 +3,37 @@
 @tailwind components;
 
 @tailwind utilities;
+
+* {
+  scrollbar-width: thin;
+  scrollbar-color: var(--secondary) var(--primary);
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  @apply w-2;
+}
+
+*::-webkit-scrollbar-track {
+  @apply bg-slate-700 rounded-md;
+}
+
+*::-webkit-scrollbar-thumb {
+  @apply bg-slate-500 rounded-xl border-[3px] border-slate-700;
+}
+
+.form-group {
+  @apply relative w-full mb-3;
+}
+
+.form-label {
+  @apply block uppercase text-white text-xs font-bold mb-2;
+}
+
+.form-input {
+  @apply border-0 px-3 py-3 placeholder-slate-300 text-slate-600 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150;
+}
+
+.btn-submit{
+    @apply py-2 px-4 text-base uppercase font-medium text-white rounded-md
+}
