--- a/styles/index.css
+++ b/styles/index.css
@@ -40,5 +40,5 @@
 
 .ck.ck-content.ck-editor__editable.ck-rounded-corners.ck-editor__editable_inline.ck-blurred,
 .ck.ck-content.ck-editor__editable.ck-rounded-corners.ck-editor__editable_inline.ck-focused {
-  @apply min-h-[500px];
+  @apply h-[500px] overflow-y-scroll;
 }
