--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -2900,6 +2900,11 @@ select {
     text-align: left;
   }
 
+  .md\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+
   .md\:opacity-100 {
     opacity: 1;
   }
